- Auto Command no longer accepts a delay when adding a command. It should now be set afterwards. - Auto Command now makes use of the generalized list command code